--- a/.github/workflows/test-crosscompile.yml
+++ b/.github/workflows/test-crosscompile.yml
@@ -12,6 +12,7 @@ jobs:
     - uses: "actions/setup-go@v5"
       with:
         go-version: "1.24.0"
+        cache: true
     - name: "provision go tools"
       run: "make go"
     - run: "mage port"
