--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,20 @@
----
-name: "Test"
+name: "CI Workflow"
 on: # yamllint disable-line rule:truthy
   push:
   pull_request:
   workflow_dispatch:
 jobs:
+  Test-Crosscompile:
+    runs-on: "ubuntu-24.04"
+    steps:
+    - uses: "actions/checkout@v4"
+    - uses: "actions/setup-go@v5"
+      with:
+        go-version: "1.24.0"
+    - name: "provision go tools"
+      run: "make go"
+    - run: "mage port"
+
   Test:
     runs-on: "ubuntu-24.04"
     steps:
