--- a/.github/workflows/test-crosscompile.yml
+++ b/.github/workflows/test-crosscompile.yml
@@ -1,9 +1,9 @@
----
-name: "Test-Crosscompile"
-on: # yamllint disable-line rule:truthy
+name: Test-Crosscompile
+on:
   push:
   pull_request:
   workflow_dispatch:
+
 jobs:
   Test-Crosscompile:
     runs-on: "ubuntu-24.04"
@@ -15,3 +15,12 @@ jobs:
     - name: "provision go tools"
       run: "make go"
     - run: "mage port"
+    - name: Cache Go dependencies
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/.cache/go-build
+          ~/go/pkg/mod
+        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}-${{ github.workflow }}-${{ github.run_id }}
+        restore-keys: |
+          ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}-
