--- a/.github/workflows/test-crosscompile.yml
+++ b/.github/workflows/test-crosscompile.yml
@@ -12,14 +12,8 @@ jobs:
     - uses: "actions/setup-go@v5"
       with:
         go-version: "1.24.0"
+        cache: false
     - name: "provision go tools"
       run: "make go"
     - run: "mage port"
-    - name: Cache Go dependencies
-      uses: actions/cache@v4
-      with:
-        path: |
-          ~/.cache/go-build
-        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}-${{ github.workflow }}-${{ github.run_id }}
-        restore-keys: |
-          ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}-
+  
