--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,10 +9,9 @@ jobs:
     runs-on: "ubuntu-24.04"
     steps:
     - uses: "actions/checkout@v4"
-    - uses: "actions/setup-go@v5"
+    - uses: "gowridurgad/setup-go@testing-cache"
       with:
         go-version: "1.24.0"
-        cache: false
     - name: "provision go tools"
       run: "make go"
     - run: "mage test"
